# ModelReview

./: .dockerignore  Dockerfile  README.md
Analiza/: analiza_datasetu.py
api/: pyproject.toml
api/app/: api.py  doc.yaml  main.py  streamlit_app.py
app/: api.py  main.py  model.py  streamlit_app.py  utils.py
dataset_scripts/: copy_files_matching_dir_name.py  copy_random_hash.py  count_files_in_dir.py  get_imdb_id.py  get_imdb_images.py  pyproject.toml  remove_first_last_img.py  rename_films_random.py  selenium_get_google_images.py  split_dataset.py
dataset_scripts/2d_animation/: 2d_filtered_folders.json  2d_title_date.json  2d_title_imdb_id.json
dataset_scripts/3d_animation/: 3d_title_date.json  3d_title_imdb_id.json
dataset_scripts/live_action/: la_title_date.json  la_title_imdb_id.json
dataset_scripts/stop_motion/: filtered_folders.json  movies.json  sm_title_date.json  sm_title_imdb_id.json
training_notebooks/: efficientnet-b0.ipynb  efficientnet-sweep.ipynb  find-architecture-sweep.ipynb
